<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:background="#2196F3"
        android:gravity="center_vertical"
        android:paddingStart="10dp"
        android:text="@string/currency_converter_app"
        android:textColor="@color/white"
        android:textSize="25sp"
        tools:ignore="RtlSymmetry" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="20dp"
        android:paddingBottom="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/show"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:gravity="center_vertical"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/edt_style">

                <HorizontalScrollView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:ignore="UselessParent">

                    <EditText
                        android:id="@+id/edtAmount"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:background="@android:color/transparent"
                        android:hint="@string/amount"
                        android:importantForAutofill="no"
                        android:inputType="phone"
                        android:paddingStart="5dp"
                        android:paddingEnd="5dp"
                        android:textColor="@color/black"
                        android:textColorHint="#757575"
                        tools:ignore="RtlSymmetry,SpeakableTextPresentCheck" />
                </HorizontalScrollView>
            </LinearLayout>

            <Spinner
                android:id="@+id/spinnerFrom"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/spinner_style"
                android:padding="1dp" />

            <Spinner
                android:id="@+id/spinnerTo"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/spinner_style"
                android:padding="1dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:id="@+id/tvResult"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="bold" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnConvert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#2196F3"
                android:text="@string/convert"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:cornerRadius="8dp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginBottom="5dp"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvRN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginBottom="5dp"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </LinearLayout>

        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="#2196F3" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvName1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvRN1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvDate1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#2196F3" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
</LinearLayout>